Hero Page completed

--- a/index.html
+++ b/index.html
@@ -3,51 +3,52 @@
 
 <head>
     <link rel="stylesheet" href="css/main.css" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Candal" rel="stylesheet">
+    <title>StudentHack VI</title>
+    <!-- <link href="https://fonts.googleapis.com/css?family=Candal" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-        crossorigin="anonymous">
+        crossorigin="anonymous"> -->
 </head>
 
 <body>
-    <div class="heroPage fullHeight">
-        <p class="title">StudentHack VI</p>
-        <img src="img/saturn.png" alt="Illustration of Saturn" class="saturn">
-    </div>
-    <div class="faqPage">
-            
-    </div>
-    <div>
-        <div class="stars parallax--quick" id="stars1"></div>
-        <div class="stars parallax--slow" id="stars2"></div>
-        <div class="stars parallax--medium" id="stars3"></div>
-    </div>
-    <!-- <div class="container-fluid content">
-        <div class="row align-items-center">
-            <div class="col">
-                <p>one</p>
-                <p>one</p>
-                <p>one</p>
-                <p>one</p>
-                <p>one</p>
+    <main id="main">
+            <a id="mlh-trust-badge" style="display:block;max-width:100px;min-width:60px;position:absolute;right:50px;top:0;width:10%;z-index:10000" href="https://mlh.io/seasons/na-2018/events?utm_source=na-2018&utm_medium=TrustBadge&utm_campaign=na-2018&utm_content=white" target="_blank"><img src="https://s3.amazonaws.com/logged-assets/trust-badge/2018/white.svg" alt="Major League Hacking 2017 Hackathon Season" style="width:70%"></a>
+        <!-- Hero page -->
+        <section id="hero">
+            <ul id="timer" class="timerGrid">
+                <li id="days">
+                    <p id="daysNumber" class="timerNumber">25</p>
+                    <p class="timerText">Days</p>
+                </li>
+                <li id="hours">
+                    <p id="hoursNumber" class="timerNumber">20</p>
+                    <p class="timerText">Hours</p>
+                </li>
+                <li id="minutes">
+                    <p id="minutesNumber" class="timerNumber">40</p>
+                    <p class="timerText">Minutes</p>
+                </li>
+                <li id="seconds">
+                    <p id="secondsNumber" class="timerNumber">20</p>
+                    <p class="timerText">Seconds</p>
+                </li>
+            </ul>
+            <header id="title" class="parallax--slow">StudentHack VI</header>
+            <div class="foreground"></div>
+        </section>
+        <!-- Venue page -->
+        <section id="venue" class="venueGrid">
+            <div id="venuePicture"></div>
+            <div id="venueInformation">
+                <p id="venueText">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque laborum, consectetur magni expedita quisquam voluptatum odio vero autem ea adipisci sunt tempora eveniet, enim ex doloremque facere porro excepturi nam minus nostrum, hic saepe delectus? Illo laudantium alias, a animi sequi deleniti qui culpa, ratione dolorum facilis, quod recusandae distinctio.</p>
+                <div id="map">MMU Business School location</div>
+            </div>
+        </section>
 
-                <p>one</p>
-                <p>one</p>
-            </div>
-            <div class="col">
-                One of three columns
-            </div>
-            <div class="col">
-                One of three columns
-            </div>
-        </div>
-    </div> -->
+        <section id="footer"></section>
+    </main>
 </body>
-
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAUXNOfuRSPD1Cq4veI_vQIU77vl9DgLpA&callback=initMap"/>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-    crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-    crossorigin="anonymous"></script> -->
 <script src="js/main.js"></script>
 
 </html>
