--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
 <head>
     <link rel="stylesheet" href="css/main.css" type="text/css">
     <title>StudentHack VI</title>
-    <!-- <link href="https://fonts.googleapis.com/css?family=Candal" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-        crossorigin="anonymous"> -->
+    <link href="https://fonts.googleapis.com/css?family=Candal" rel="stylesheet">
 </head>
 
 <body>
@@ -44,7 +42,9 @@
             </div>
         </section>
 
-        <section id="footer"></section>
+        <section id="footer">
+
+        </section>
     </main>
 </body>
 <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAUXNOfuRSPD1Cq4veI_vQIU77vl9DgLpA&callback=initMap"/>
