--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
     </main>
 </body>
 
+<!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAUXNOfuRSPD1Cq4veI_vQIU77vl9DgLpA&callback=initMap"/> -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="js/main.js"></script>
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAUXNOfuRSPD1Cq4veI_vQIU77vl9DgLpA&callback=initMap"/>
 
 </html>
