--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>StudentHack VI</title>
     <link href="https://fonts.googleapis.com/css?family=Candal" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
 </head>
 
 <body>
