Added footer logos

--- a/index.html
+++ b/index.html
@@ -41,10 +41,13 @@
                 <br> 28 - 29 April 2018</p>
         </section>
         <div id="foreground" class="fullscreen background"></div>
-
-        <section id="footer">
-
-        </section>
+        <div id="footer">
+            <span class="footerLogos">
+                    <a href="https://www.facebook.com/studenthack/" class="footerLogo" id="facebook"></a>
+                    <a href="https://twitter.com/studenthack" class="footerLogo" id="twitter"></a>
+                    <a href="https://github.com/hacksoc-manchester/2018-studenthack" class="footerLogo" id="github"></a>
+            </span>
+        </div>
     </main>
 </body>
 
