--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 </div>
                 <div class="faqQuestion orangeMarker">
                     <div class="questionBG">
-                        <i class="far fa-file fa-4x questionIcon"></i>
+                        <i class="fas fa-laptop fa-4x questionIcon"></i>
                         <p class="questionTitle text">What should I bring?</p>
                         <p class="questionText text">
                             <span>
@@ -155,6 +155,7 @@
             </div>
         </section>
         <div id="footer">
+            <p id="footerText" class="text">© 2018 HackSoc</p>
             <span class="footerLogos">
                 <a href="https://www.facebook.com/studenthack/" class="footerLogo" id="facebook"></a>
                 <a href="https://twitter.com/studenthack" class="footerLogo" id="twitter"></a>
