Add new question to FAQ

--- a/index.html
+++ b/index.html
@@ -113,8 +113,9 @@
                         <p class="questionTitle text">I don’t have a team. Help?</p>
                         <p class="questionText text">
                             <span>
-                                We will organise a team-building session, where you will meet other participants just like you. We ask for the teams to be
-                                of 4 people maximum.
+                                We encourage everybody to form a team with new people, regardless of whether you come with your buddies or not! We will organise
+                                a team-building session, where you will meet other participants just like you. We ask for
+                                the teams to be of 4 people maximum.
                             </span>
                         </p>
                     </div>
@@ -132,11 +133,11 @@
                 </div>
                 <div class="faqQuestion redMarker">
                     <div class="questionBG">
-                        <i class="far fa-file fa-4x questionIcon"></i>
-                        <p class="questionTitle text">Do you have a code of conduct?</p>
+                        <i class="fas fa-plane fa-4x questionIcon"></i>
+                        <p class="questionTitle text">Do you offer travel reimbursement?</p>
                         <p class="questionText text">
                             <span>
-                                Yes! We strictly adhere to the.
+                                Unfortunately, we cannot reimburse you for your travel expenses.
                             </span>
                         </p>
                     </div>
@@ -147,7 +148,7 @@
                         <p class="questionTitle text">Who owns my IP/code/idea?</p>
                         <p class="questionText text">
                             <span>
-                                You own all the rights to your intellectual property. We won’t claim any right over anything made during this event.
+                                You own all the rights to your intellectual property. We won’t claim any right over anything made during this event. Neil Armstrong will not ask for anything this time.
                             </span>
                         </p>
                     </div>
