Fix image glitch

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="faqGrid">
                 <div class="faqQuestion cyanMarker">
                     <div class="questionBG">
-                        <i class="far fa-money-bill-alt fa-4x questionIcon"></i>
+                        <i class="fas fa-money-bill-alt fa-4x questionIcon"></i>
                         <p class="questionTitle text">Are tickets free?</p>
                         <p class="questionText text">Yes, 100%</p>
                     </div>
@@ -82,7 +82,7 @@
                 <div class="faqQuestion orangeMarker">
                     <div class="questionBG">
                         <div class="questionBG">
-                            <i class="far fa-question-circle fa-4x questionIcon"></i>
+                            <i class="fas fa-question-circle fa-4x questionIcon"></i>
                             <p class="questionTitle text">I haven’t coded much. Should I come?</p>
                             <p class="questionText text">
                                 <span>
@@ -122,7 +122,7 @@
                 </div>
                 <div class="faqQuestion redMarker">
                     <div class="questionBG">
-                        <i class="far fa-star fa-4x questionIcon"></i>
+                        <i class="fas fa-star fa-4x questionIcon"></i>
                         <p class="questionTitle text">What can I expect from StudentHack?</p>
                         <p class="questionText text">
                             <span>
@@ -144,7 +144,7 @@
                 </div>
                 <div class="faqQuestion redMarker">
                     <div class="questionBG">
-                        <i class="far fa-copyright fa-4x questionIcon"></i>
+                        <i class="fas fa-copyright fa-4x questionIcon"></i>
                         <p class="questionTitle text">Who owns my IP/code/idea?</p>
                         <p class="questionText text">
                             <span>
