--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <div id="falcon" class="fullscreen parallax--fast background"></div>
     <div id="meteor" class="fullscreen parallax--medium background"></div>
     <div id="logo"></div>
+    <a href="https://www.eventbrite.co.uk/e/studenthack-vi-tickets-44580406195?aff=es2" id="ticketsBtn"></a>
 
     <main id="main">
         <!-- Hero page -->
