Made the links open new tabs

--- a/index.html
+++ b/index.html
@@ -175,9 +175,9 @@
         <div id="footer">
                 <p id="footerText" class="text">© 2018 HackSoc</p>
                 <span class="footerLogos">
-                    <a href="https://www.facebook.com/studenthack/" class="footerLogo" id="facebook"></a>
-                    <a href="https://twitter.com/studenthack" class="footerLogo" id="twitter"></a>
-                    <a href="https://github.com/hacksoc-manchester/2018-studenthack" class="footerLogo" id="github"></a>
+                    <a target="_blank" href="https://www.facebook.com/studenthack/" class="footerLogo" id="facebook"></a>
+                    <a target="_blank" href="https://twitter.com/studenthack" class="footerLogo" id="twitter"></a>
+                    <a target="_blank" href="https://github.com/hacksoc-manchester/2018-studenthack" class="footerLogo" id="github"></a>
                 </span>
             </div>
     </section>
