Fix route to Github logo in sponsors

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         </div>
         <div id="silver">
             <header>silver</header>
-            <img src="img/github.png" id="githubLogo"></img>
+            <img src="img/gitHub.png" id="githubLogo"></img>
             <img src="img/bloomberg.png" id="bloomberg"></img>
         </div>
         <div id="bronze">
