--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
         <div id="foreground" class="fullscreen"></div>
         <div id="content" class="fullscreen grid parallax--fast">
             <div id="redirectButtons">
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSdxXLqlWuSdFvCUYN5gNEBi7MllFh1xPtkkEMroVNVmpMCDgw/viewform" target="_blank" id="volunteerBtn" class="secondaryBtn"></a>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSdxXLqlWuSdFvCUYN5gNEBi7MllFh1xPtkkEMroVNVmpMCDgw/viewform" target="_blank"
+                    id="volunteerBtn" class="secondaryBtn"></a>
                 <a href="https://www.eventbrite.co.uk/e/studenthack-vi-tickets-44580406195?aff=es2" target="_blank" id="ticketsBtn"></a>
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSfOF052JIinAYxuYoRneYZFRz-pSoqBqEMniOOIxFApRkJcVA/viewform " target="_blank" id="mentorBtn" class="secondaryBtn"></a>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSfOF052JIinAYxuYoRneYZFRz-pSoqBqEMniOOIxFApRkJcVA/viewform " target="_blank"
+                    id="mentorBtn" class="secondaryBtn"></a>
             </div>
             <ul id="timer" class="grid text">
                 <li id="days">
@@ -177,13 +179,13 @@
             <img src="img/morganStanley.png" id="morganStanley"></img>
         </div>
         <div id="footer">
-                <p id="footerText" class="text">© 2018 HackSoc</p>
-                <span class="footerLogos">
-                    <a target="_blank" href="https://www.facebook.com/studenthack/" class="footerLogo" id="facebook"></a>
-                    <a target="_blank" href="https://twitter.com/studenthack" class="footerLogo" id="twitter"></a>
-                    <a target="_blank" href="https://github.com/hacksoc-manchester/2018-studenthack" class="footerLogo" id="github"></a>
-                </span>
-            </div>
+            <p id="footerText" class="text">© 2018 HackSoc</p>
+            <span class="footerLogos">
+                <a target="_blank" href="https://www.facebook.com/studenthack/" class="footerLogo" id="facebook"></a>
+                <a target="_blank" href="https://twitter.com/studenthack" class="footerLogo" id="twitter"></a>
+                <a target="_blank" href="https://github.com/hacksoc-manchester/2018-studenthack" class="footerLogo" id="github"></a>
+            </span>
+        </div>
     </section>
     <div id="logo"></div>
 </body>
