Add links to sponsor logos

--- a/index.html
+++ b/index.html
@@ -167,16 +167,24 @@
         <div id="sponsorsTitle"></div>
         <div id="gold">
             <header>gold</header>
-            <img src="img/webApps.png" id="webApps"></img>
+            <a target="_blank" href="https://www.webapplicationsuk.com/careers/">
+                <img src="img/webApps.png" id="webApps"></img>
+            </a>
         </div>
         <div id="silver">
             <header>silver</header>
-            <img src="img/gitHub.png" id="githubLogo"></img>
-            <img src="img/bloomberg.png" id="bloomberg"></img>
+            <a target="_blank" href="https://education.github.com/pack">
+                <img src="img/gitHub.png" id="githubLogo"></img>
+            </a>
+            <a target="_blank" href="https://www.bloomberg.com/europe">
+                <img src="img/bloomberg.png" id="bloomberg"></img>
+            </a>
         </div>
         <div id="bronze">
             <header>bronze</header>
-            <img src="img/morganStanley.png" id="morganStanley"></img>
+            <a target="_blank" href="http://www.morganstanley.com/people">
+                <img src="img/morganStanley.png" id="morganStanley"></img>
+            </a>
         </div>
         <div id="footer">
             <p id="footerText" class="text">© 2018 HackSoc</p>
