Add FAQ slider on phone

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
     <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl"
         crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="slick/slick.css" />
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
 </head>
 
 <body>
@@ -55,6 +57,7 @@
     </section>
     <section id="faq">
         <div id="faqTitle"></div>
+        <p id="faqExplanation" class="text">swipe to find out more</p>
         <div id="faqGrid" class="grid">
             <div class="faqQuestion cyanMarker">
                 <div class="questionBG">
@@ -196,11 +199,11 @@
         </div>
     </section>
     <div id="logo"></div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script type="text/javascript" src="slick/slick.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 <footer>
 </footer>
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="js/main.js"></script>
 
 </html>
