--- a/index.html
+++ b/index.html
@@ -326,6 +326,7 @@
         </div>
         <div id="footer">
             <p id="footerText" class="text">© 2018 HackSoc</p>
+            <a target="_blank" href="https://drive.google.com/file/d/1xhrW9tEV1ufX52Sbm7bOeTXxcoQc1z_P/view" id="footerLink" class="text">Code of Conduct</a>
             <div class="footerLogos">
                 <a target="_blank" href="https://www.facebook.com/studenthack/" class="footerLogo" id="facebook"></a>
                 <a target="_blank" href="https://twitter.com/studenthack" class="footerLogo" id="twitter"></a>
