--- a/index.html
+++ b/index.html
@@ -2,15 +2,17 @@
 <html lang="en-US">
 
 <head>
-    <link rel="stylesheet" href="css/main.css?v=1.2" type="text/css">
     <title>StudentHack VI</title>
-    <link href="https://fonts.googleapis.com/css?family=Candal" rel="stylesheet">
+    <meta http-equiv="Cache-Control" content="no-store" />
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/main.css?v=1.2" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Candal" rel="stylesheet">
     <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
-    <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl"
-        crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="slick/slick.css" />
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
+    <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -51,21 +53,21 @@
             <div id="timerPhone" class="text">
                 <div class="timerRow">
                     <div id="days">
-                        <p id="daysNumber" class="timerNumber">25</p>
+                        <p id="daysNumberP" class="timerNumber">25</p>
                         <p class="timerText">Days</p>
                     </div>
                     <div id="hours">
-                        <p id="hoursNumber" class="timerNumber">20</p>
+                        <p id="hoursNumberP" class="timerNumber">20</p>
                         <p class="timerText">Hours</p>
                     </div>
                 </div>
                 <div class="timerRow">
                     <div id="minutes">
-                        <p id="minutesNumber" class="timerNumber">40</p>
+                        <p id="minutesNumberP" class="timerNumber">40</p>
                         <p class="timerText">Minutes</p>
                     </div>
                     <div id="seconds">
-                        <p id="secondsNumber" class="timerNumber">20</p>
+                        <p id="secondsNumberP" class="timerNumber">20</p>
                         <p class="timerText">Seconds</p>
                     </div>
                 </div>
