Add progress bar to FAQ slideshow

--- a/index.html
+++ b/index.html
@@ -338,6 +338,7 @@
                 </div>
             </div>
         </div>
+        <div id="slideshowProgressBar"></div>
     </section>
     <section id="sponsors">
         <div id="sponsorsTitle"></div>
