--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
             <a target="_blank" href="https://www.webapplicationsuk.com/careers/">
                 <img src="img/webApps.png" id="webApps"></img>
             </a>
-            <a target="_blank" href="http://">
+            <a target="_blank" href="https://www.thg.com/careers/">
                 <img src="img/thgLogo.png" id="thg" alt="The Hut Group">
             </a>
         </div>
@@ -359,7 +359,7 @@
             <a target="_blank" href="https://www.bloomberg.com/europe">
                 <img src="img/bloomberg.png" id="bloomberg"></img>
             </a>
-            <a target="_blank" href="https://www.bloomberg.com/europe">
+            <a target="_blank" href="https://www.twilio.com/company/jobs">
                 <img src="img/twillioLogo.png" id="twillio"></img>
             </a>
         </div>
@@ -368,7 +368,7 @@
             <a target="_blank" href="http://www.morganstanley.com/people">
                 <img src="img/morganStanley.png" id="morganStanley"></img>
             </a>
-            <a target="_blank" href="http://www.morganstanley.com/people">
+            <a target="_blank" href="https://www.codethink.co.uk/join-us.html">
                 <img src="img/CodeThink.png" id="codeThink"></img>
             </a>
         </div>
